Add header content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather|Oswald" type="text/css">
   </head>
   <body>
-
+    <article>
+      <header>
+        <div>Clinical Guidelines</div>
+        <div>13 October 2015</div>
+        <h1>Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
+        <address>Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
+        <div>
+          <a href="#" title="Article, Author, and Disclosure Info">Article, Author, and Disclosure Info</a>
+        </div>
+      </header>
+      <main>
+        <section><!-- Navigation/Table of Contents --></section>
+        <section><!-- Article content --></section>
+      </main>
+    </article>
   </body>
 </html>
