Add nav content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
         </div>
       </header>
       <main>
-        <section><!-- Navigation/Table of Contents --></section>
+        <section>
+          <nav>
+            <ul>
+              <li>Article
+                <ul>
+                  <li>Abstract</li>
+                  <li>Methods</li>
+                  <li>Results</li>
+                  <li>Conclusion</li>
+                  <li>References</li>
+                  <li>Comments</li>
+                </ul>
+              </li>
+              <li>Figures</li>
+              <li>Tables</li>
+              <li>Supplements</li>
+              <li>CME/MOC</li>
+            </ul>
+          </nav>
+        </section>
         <section>
           <h2>Abstract</h2>
           <p><b>Description:</b> Pulmonary embolism (PE) can be a severe disease and is difficult to diagnose, given its nonspecific signs and symptoms. Because of this, testing patients with suspected acute PE has increased dramatically. However, the overuse of some tests, particularly computed tomography (CT) and plasma d-dimer measurement, may not improve care while potentially leading to patient harm and unnecessary expense.</p>
