Add share links list to nav section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
               <li>CME/MOC</li>
             </ul>
           </nav>
+          <div>
+            <ul>
+              <li>Tweet</li>
+              <li>Share</li>
+              <li>Email</li>
+            </ul>
+          </div>
         </section>
         <section>
           <h2>Abstract</h2>
