Implement serif and sans-serif font-families

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <meta name="description" content="Pulmonary embolism (PE) can be a severe disease and is difficult to diagnose, given its nonspecific signs and symptoms. Because of this, testing patients with suspected acute PE has increased dramatically. However, the overuse of some tests, particularly computed tomography (CT) and plasma d-dimer measurement, may not improve care while potentially leading to patient harm and unnecessary expense.">
     <meta name="keywords" content="pulmonary embolism">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <article>
       <header>
-        <div>Clinical Guidelines</div>
-        <div>13 October 2015</div>
-        <h1>Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
-        <address>Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
-        <div>
+        <div class="sans-serif">Clinical Guidelines</div>
+        <div class="sans-serif">13 October 2015</div>
+        <h1 class="sans-serif">Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
+        <address class="serif">Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
+        <div class="serif">
           <a href="#" title="Article, Author, and Disclosure Info">Article, Author, and Disclosure Info</a>
         </div>
       </header>
       <main>
-        <section>
+        <section class="sans-serif">
           <nav>
             <ul>
               <li>Article
@@ -48,8 +49,8 @@
             </ul>
           </div>
         </section>
-        <section>
-          <h2>Abstract</h2>
+        <section class="serif">
+          <h2 class="sans-serif">Abstract</h2>
           <p><b>Description:</b> Pulmonary embolism (PE) can be a severe disease and is difficult to diagnose, given its nonspecific signs and symptoms. Because of this, testing patients with suspected acute PE has increased dramatically. However, the overuse of some tests, particularly computed tomography (CT) and plasma d-dimer measurement, may not improve care while potentially leading to patient harm and unnecessary expense.</p>
           <p><b>Methods:</b> The literature search encompassed studies indexed by MEDLINE (1966–2014; English-language only) and included all clinical trials and meta-analyses on diagnostic strategies, decision rules, laboratory tests, and imaging studies for the diagnosis of PE. This document is not based on a formal systematic review, but instead seeks to provide practical advice based on the best available evidence and recent guidelines. The target audience for this paper is all clinicians; the target patient population is all adults, both inpatient and outpatient, suspected of having acute PE.</p>
         </section>
