--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <body>
     <article>
       <header>
-        <div class="sans-serif">Clinical Guidelines</div>
-        <div class="sans-serif">13 October 2015</div>
+        <div class="sans-serif">Clinical Guidelines | 13 October 2015</div>
         <h1 class="sans-serif">Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
         <address class="serif">Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
         <div class="serif">
