Create grid layout for article-nav & article-content

--- a/index.html
+++ b/index.html
@@ -20,27 +20,29 @@
           <a href="#" title="Article, Author, and Disclosure Info">Article, Author, and Disclosure Info</a>
         </div>
       </header>
-      <main>
-        <section class="sans-serif">
-          <nav>
-            <ul>
-              <li>Article
-                <ul>
-                  <li>Abstract</li>
-                  <li>Methods</li>
-                  <li>Results</li>
-                  <li>Conclusion</li>
-                  <li>References</li>
-                  <li>Comments</li>
-                </ul>
-              </li>
-              <li>Figures</li>
-              <li>Tables</li>
-              <li>Supplements</li>
-              <li>CME/MOC</li>
-            </ul>
-          </nav>
-          <div>
+      <main class="main">
+        <section class="sans-serif article-nav">
+          <div class="table-of-contents">
+            <nav>
+              <ul>
+                <li>Article
+                  <ul>
+                    <li>Abstract</li>
+                    <li>Methods</li>
+                    <li>Results</li>
+                    <li>Conclusion</li>
+                    <li>References</li>
+                    <li>Comments</li>
+                  </ul>
+                </li>
+                <li>Figures</li>
+                <li>Tables</li>
+                <li>Supplements</li>
+                <li>CME/MOC</li>
+              </ul>
+            </nav>
+          </div>
+          <div class="share-links">
             <ul>
               <li>Tweet</li>
               <li>Share</li>
@@ -48,7 +50,7 @@
             </ul>
           </div>
         </section>
-        <section class="serif">
+        <section class="serif article-content">
           <h2 class="sans-serif">Abstract</h2>
           <p><b>Description:</b> Pulmonary embolism (PE) can be a severe disease and is difficult to diagnose, given its nonspecific signs and symptoms. Because of this, testing patients with suspected acute PE has increased dramatically. However, the overuse of some tests, particularly computed tomography (CT) and plasma d-dimer measurement, may not improve care while potentially leading to patient harm and unnecessary expense.</p>
           <p><b>Methods:</b> The literature search encompassed studies indexed by MEDLINE (1966–2014; English-language only) and included all clinical trials and meta-analyses on diagnostic strategies, decision rules, laboratory tests, and imaging studies for the diagnosis of PE. This document is not based on a formal systematic review, but instead seeks to provide practical advice based on the best available evidence and recent guidelines. The target audience for this paper is all clinicians; the target patient population is all adults, both inpatient and outpatient, suspected of having acute PE.</p>
