Define basic page layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <article>
+    <article class="article">
       <header>
         <div class="sans-serif">Clinical Guidelines | 13 October 2015</div>
         <h1 class="sans-serif">Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
