--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <div class="sans-serif">Clinical Guidelines | 13 October 2015</div>
         <h1 class="sans-serif">Evaluation of Patients With Suspected Acute Pulmonary Embolism: Best Practice Advice From the Clinical Guidelines Committee of the American College of Physicians</h1>
-        <address class="serif">Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
+        <address class="serif authors">Ali S. Raja, MD; Jeffrey O. Greenberg, MD; Amir Qaseem, MD, PhD, MHA; Thomas D. Denberg, MD, PhD; Nick Fitterman, MD; Jeremiah D. Schuur, MD, MHS, for the Clinical Guidelines Committee of the American College of Physicians</address>
         <div class="serif">
           <a href="#" title="Article, Author, and Disclosure Info">Article, Author, and Disclosure Info</a>
         </div>
