Replace share link text with icons

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
             </nav>
           </div>
           <div class="share-links">
-            <ul>
-              <li>Tweet</li>
-              <li>Share</li>
-              <li>Email</li>
-            </ul>
+            <div><a title="Share this Article on Twitter" href="#"><img alt="twitter icon" src="img/twitter-icon-20x20.png" /></a></div>
+            <div><a title="Share this Article on Facebook" href="#"><img alt="facebook icon" src="img/facebook-icon-20x20.png" /></a></div>
+            <div><a title="Share this Article via Email" href="#"><img alt="email icon" src="img/email-icon-20x20.png" /></a></div>
           </div>
         </section>
         <section class="serif article-content">
