Set list styles and spacing for article-nav

--- a/index.html
+++ b/index.html
@@ -24,21 +24,20 @@
         <section class="sans-serif article-nav">
           <div class="table-of-contents">
             <nav>
-              <ul>
-                <li>Article
-                  <ul>
-                    <li>Abstract</li>
-                    <li>Methods</li>
-                    <li>Results</li>
-                    <li>Conclusion</li>
-                    <li>References</li>
-                    <li>Comments</li>
-                  </ul>
-                </li>
-                <li>Figures</li>
-                <li>Tables</li>
-                <li>Supplements</li>
-                <li>CME/MOC</li>
+              <ul class="nav-level-1">
+                <li class="nav-level-1-active"><a href="">Article</li>
+                <ul class="nav-level-2">
+                  <li><a class="nav-level-2-active" href="">Abstract</a></li>
+                  <li><a href="">Methods</a></li>
+                  <li><a href="">Results</a></li>
+                  <li><a href="">Conclusion</a></li>
+                  <li><a href="">References</a></li>
+                  <li><a href="">Comments</a></li>
+                </ul>
+                <li><a href="">Figures</a></li>
+                <li><a href="">Tables</a></li>
+                <li><a href="">Supplements</a></li>
+                <li><a href="">CME/MOC</a></li>
               </ul>
             </nav>
           </div>
